--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
 	<head>
@@ -69,7 +69,7 @@
 				<div class="title"><span>About Me</span></div>
 				<div class="about-details">
 					<div class="left">
-						<img src="images/about.jpg" alt="" />
+						<img src="https://pbs.twimg.com/profile_images/1378999055154511879/XmphRvoz_400x400.jpg" alt="" />
 					</div>
 					<div class="right">
 						<div class="topic">A Web Development Enthusiast</div>
