--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="UTF-8" />
@@ -57,9 +56,6 @@
 					<div class="text-three">Full Stack Web Developer</div>
 					<div class="text-four"></div>
 				</div>
-				<!-- <div class="button">
-					<button>Hire Me</button>
-				</div> -->
 			</div>
 		</section>
 
@@ -69,7 +65,10 @@
 				<div class="title"><span>About Me</span></div>
 				<div class="about-details">
 					<div class="left">
-						<img src="https://pbs.twimg.com/profile_images/1378999055154511879/XmphRvoz_400x400.jpg" alt="" />
+						<img
+							src="https://pbs.twimg.com/profile_images/1378999055154511879/XmphRvoz_400x400.jpg"
+							alt=""
+						/>
 					</div>
 					<div class="right">
 						<div class="topic">A Web Development Enthusiast</div>
@@ -93,44 +92,57 @@
 		<section class="skills" id="skills">
 			<div class="content">
 				<div class="title"><span>My Skills</span></div>
-				<div class="skills-details">
-					<div class="boxes">
-						<div class="box">
-							<div class="topic">HTML</div>
-							<div class="per">70%</div>
-						</div>
-						<div class="box">
-							<div class="topic">CSS</div>
-							<div class="per">80%</div>
-						</div>
-						<div class="box">
-							<div class="topic">JavaScript</div>
-							<div class="per">90%</div>
-						</div>
-						<div class="box">
-							<div class="topic">React.js</div>
-							<div class="per">85%</div>
-						</div>
+				<div class="section_content">
+			<div class="skillz">
+				<div class="skillz_category"> 
+					<div class="skillz_category_label">
+						Languages
 					</div>
-					<div class="boxes">
-						<div class="box">
-							<div class="topic">Redux</div>
-							<div class="per">85%</div>
-						</div>
-						<div class="box">
-							<div class="topic">Next.js</div>
-							<div class="per">60%</div>
-						</div>
-						<div class="box">
-							<div class="topic">Python</div>
-							<div class="per">70%</div>
-						</div>
-						<div class="box">
-							<div class="topic">Material UI</div>
-							<div class="per">60%</div>
-						</div>
-					</div>
+					<ul>
+						<li class="skillz_category_item">HTML5</li>
+						<li class="skillz_category_item">CSS3</li>
+						<li class="skillz_category_item">JAVASCRIPT</li>
+						 <li class="skillz_category_item">PYTHON</li>
+						 <li class="skillz_category_item">C LANGUAGE</li>
+					</ul> 
 				</div>
+
+				<div class="skillz_category"> 
+					<div class="skillz_category_label">
+						Frameworks
+					</div>
+					<ul>
+						<li class="skillz_category_item">REACT.JS</li>
+						<li class="skillz_category_item">NODE.JS</li>
+						<li class="skillz_category_item">EXPRESS.JS</li>
+						<li class="skillz_category_item">NEXT.JS</li>
+						<li class="skillz_category_item">STYLED-COMPONENTS</li> 
+						<li class="skillz_category_item">MATERIAL-UI</li>
+					</ul>
+				</div>
+
+				<div class="skillz_category"> 
+					<div class="skillz_category_label">
+						Tools
+					</div>
+					<ul>
+						<li class="skillz_category_item">GIT & GITHUB</li>
+						<li class="skillz_category_item">HEROKU</li>
+						<li class="skillz_category_item">POSTMAN</li>	
+					</ul>
+				</div>
+			
+				<div class="skillz_category"> 
+					<div class="skillz_category_label">
+						Soft Skills
+					</div>
+					<ul>
+						<li class="skillz_category_item">PROBLEM SOLVING</li>
+						<li class="skillz_category_item">TEAM PLAYER</li>
+						<li class="skillz_category_item">REMOTE WORK</li>
+					</ul>
+				</div>
+			</div>
 			</div>
 		</section>
 
