--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
-		<!-- Move to up button -->
-		<div class="scroll-button">
-			<a href="#home"><i class="fas fa-arrow-up"></i></a>
-		</div>
-		<!-- navgaition menu -->
 		<nav>
 			<div class="navbar">
 				<div class="logo"><a href="#">My Portfolio</a></div>
@@ -46,8 +41,6 @@
 				<i class="fas fa-bars"></i>
 			</div>
 		</nav>
-
-		<!-- Home Section Start -->
 		<section class="home" id="home">
 			<div class="home-content">
 				<div class="text">
@@ -58,8 +51,6 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- About Section Start -->
 		<section class="about" id="about">
 			<div class="content">
 				<div class="title"><span>About Me</span></div>
@@ -86,155 +77,88 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- My Skill Section Start -->
-		<!-- Section Tag and Other Div will same where we need to put same CSS -->
 		<section class="skills" id="skills">
 			<div class="content">
 				<div class="title"><span>My Skills</span></div>
 				<div class="section_content">
-			<div class="skillz">
-				<div class="skillz_category"> 
-					<div class="skillz_category_label">
-						Languages
-					</div>
-					<ul>
-						<li class="skillz_category_item">HTML5</li>
-						<li class="skillz_category_item">CSS3</li>
-						<li class="skillz_category_item">JAVASCRIPT</li>
-						 <li class="skillz_category_item">PYTHON</li>
-						 <li class="skillz_category_item">C LANGUAGE</li>
-					</ul> 
-				</div>
+					<div class="skillz">
+						<div class="skillz_category">
+							<div class="skillz_category_label">Languages</div>
+							<ul>
+								<li class="skillz_category_item">HTML5</li>
+								<li class="skillz_category_item">CSS3</li>
+								<li class="skillz_category_item">JAVASCRIPT</li>
+								<li class="skillz_category_item">PYTHON</li>
+								<li class="skillz_category_item">C LANGUAGE</li>
+							</ul>
+						</div>
 
-				<div class="skillz_category"> 
-					<div class="skillz_category_label">
-						Frameworks
-					</div>
-					<ul>
-						<li class="skillz_category_item">REACT.JS</li>
-						<li class="skillz_category_item">NODE.JS</li>
-						<li class="skillz_category_item">EXPRESS.JS</li>
-						<li class="skillz_category_item">NEXT.JS</li>
-						<li class="skillz_category_item">STYLED-COMPONENTS</li> 
-						<li class="skillz_category_item">MATERIAL-UI</li>
-					</ul>
-				</div>
+						<div class="skillz_category">
+							<div class="skillz_category_label">Frameworks</div>
+							<ul>
+								<li class="skillz_category_item">REACT.JS</li>
+								<li class="skillz_category_item">NODE.JS</li>
+								<li class="skillz_category_item">EXPRESS.JS</li>
+								<li class="skillz_category_item">NEXT.JS</li>
+								<li class="skillz_category_item">STYLED-COMPONENTS</li>
+								<li class="skillz_category_item">MATERIAL-UI</li>
+							</ul>
+						</div>
 
-				<div class="skillz_category"> 
-					<div class="skillz_category_label">
-						Tools
+						<div class="skillz_category">
+							<div class="skillz_category_label">Tools</div>
+							<ul>
+								<li class="skillz_category_item">GIT & GITHUB</li>
+								<li class="skillz_category_item">HEROKU</li>
+								<li class="skillz_category_item">POSTMAN</li>
+							</ul>
+						</div>
+
+						<div class="skillz_category">
+							<div class="skillz_category_label">Soft Skills</div>
+							<ul>
+								<li class="skillz_category_item">PROBLEM SOLVING</li>
+								<li class="skillz_category_item">TEAM PLAYER</li>
+								<li class="skillz_category_item">REMOTE WORK</li>
+							</ul>
+						</div>
 					</div>
-					<ul>
-						<li class="skillz_category_item">GIT & GITHUB</li>
-						<li class="skillz_category_item">HEROKU</li>
-						<li class="skillz_category_item">POSTMAN</li>	
-					</ul>
 				</div>
-			
-				<div class="skillz_category"> 
-					<div class="skillz_category_label">
-						Soft Skills
-					</div>
-					<ul>
-						<li class="skillz_category_item">PROBLEM SOLVING</li>
-						<li class="skillz_category_item">TEAM PLAYER</li>
-						<li class="skillz_category_item">REMOTE WORK</li>
-					</ul>
-				</div>
-			</div>
 			</div>
 		</section>
-
-		<!-- My Services Section Start -->
-		<!-- <section class="services" id="services">
+		<section class="projects" id="projects">
 			<div class="content">
 				<div class="title"><span>My Projects</span></div>
-				<div class="boxes">
-					<div class="box">
-						<div class="icon">
-							<i class="fas fa-desktop"></i>
-						</div>
-						<div class="topic">Web Devlopment</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fas fa-paint-brush"></i>
-						</div>
-						<div class="topic">Graphic Design</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fas fa-chart-line"></i>
-						</div>
-						<div class="topic">Digital Marketing</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fab fa-android"></i>
-						</div>
-						<div class="topic">Icon Design</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fas fa-camera-retro"></i>
-						</div>
-						<div class="topic">Photography</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fas fa-tablet-alt"></i>
-						</div>
-						<div class="topic">Apps Devlopment</div>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-							autem quam odio, qui voluptatem eligendi?
-						</p>
+				<div class="contents">
+					<div class="card">
+						<div class="card_left"></div>
+						<div class="card_right"></div>
 					</div>
 				</div>
 			</div>
-		</section> -->
-
-		<!-- Contact Me section Start -->
-		<!-- <section class="contact" id="contact">
+		</section>
+		<section class="contact" id="contact">
 			<div class="content">
 				<div class="title"><span>Contact Me</span></div>
 				<div class="text">
-					<div class="topic">Have Any Project?</div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
-						neque ipsum corrupti dolores, facere numquam voluptate aspernatur
-						sit perferendis qui nisi modi! Recusandae deserunt consequatur
-						voluptatibus alias repellendus nobis eligendi.
-					</p>
-					<div class="button">
-						<button>Let's Chat</button>
+					<div class="topic">Reach out for a new project or to say hello</div>
+					<div class="form">
+						<div class="form-top">
+							<input type="text" placeholder="Enter Name" />
+							<input type="text" placeholder="Enter E-mail" />
+						</div>
+						<div class="form-bottom">
+							<textarea placeholder="Enter Message ..."></textarea>
+						</div>
 					</div>
+					<div class="button">
+						<button>Send</button>
+					</div>
+					<div class="contact_details">Email - someshkumar71524@gmail.com</div>
+					<div class="contact_details">Mobile - +91-6354136407</div>
 				</div>
 			</div>
-		</section> -->
-
-		<!-- Footer Section Start -->
+		</section>
 		<footer>
 			<div class="text">
 				<span
@@ -243,7 +167,6 @@
 				>
 			</div>
 		</footer>
-
 		<script src="script.js"></script>
 	</body>
 </html>
