--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="about-details">
 					<div class="left">
 						<img
-							src="https://pbs.twimg.com/profile_images/1378999055154511879/XmphRvoz_400x400.jpg"
+							src="https://pbs.twimg.com/profile_images/1433635087652851750/Paf6dlcu_400x400.jpg"
 							alt=""
 						/>
 					</div>
@@ -67,11 +67,11 @@
 							Hi, I’m Somesh Yadav, graduate from Masai School Web Development
 							Program. I have both hands-on skills on Frontend and Backend
 							technologies to create scalable web applications. I have worked on
-							many projects alone as well as with teams and able to work
+							many projects alone as well as with team and able to work
 							remotely.
 						</p>
 						<div class="button">
-							<button>Download Resume</button>
+							<button>My Resume</button>
 						</div>
 					</div>
 				</div>
@@ -129,12 +129,7 @@
 		<section class="projects" id="projects">
 			<div class="content">
 				<div class="title"><span>My Projects</span></div>
-				<div class="contents">
-					<div class="card">
-						<div class="card_left"></div>
-						<div class="card_right"></div>
-					</div>
-				</div>
+				<div class="contents"></div>
 			</div>
 		</section>
 		<section class="contact" id="contact">
