--- a/index.html
+++ b/index.html
@@ -126,10 +126,132 @@
 				</div>
 			</div>
 		</section>
-		<section class="projects" id="projects">
+		<section class="projects_cont" id="projects">
 			<div class="content">
 				<div class="title"><span>My Projects</span></div>
-				<div class="contents"></div>
+				<div class="boxes">
+					<div class="box">
+						<div class="projImg">
+							<img src="images/travelguru.png" alt="travelguru.com" />
+						</div>
+						<div class="topic">
+							Clone of<br />
+							Travelguru.com
+						</div>
+						<p>
+							Travelguru Homestays is a website that provides a marketplace that
+							offers you an opportunity to book unique accommodations anywhere
+							in the country.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-react react"></i>
+								<p>React</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JavaScript</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/bharadwaj-bhat/Travel_Guru"
+								target="blank"
+								><i class="fab fa-github"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+					<div class="box">
+						<div class="projImg">
+							<img src="images/shine.jpeg" alt="shine.com" />
+						</div>
+
+						<div class="topic">
+							Clone of<br />
+							Shine.com
+						</div>
+						<p>
+							Shine.com is the most innovative and second largest online job
+							portal in India. It has more than 3 lakh latest job vacancies from
+							leading companies on site.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-react react"></i>
+								<p>React</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JavaScript</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/Shine-Clone"
+								target="blank"
+								><i class="fab fa-github"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+					<div class="box">
+						<div class="projImg">
+							<img src="Images/interntheory.png" alt="booking.com" />
+						</div>
+						<div class="topic">
+							Clone of<br />
+							Interntheory.com
+						</div>
+						<p>
+							InternTheory is a web application which provides a platform to
+							mediate between students and companies for relevant internships as
+							well as jobs with neccesary skills.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JavaScript</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
+								target="blank"
+								><i class="fab fa-github"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class="contact" id="contact">
