--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					</div>
 					<div class="box">
 						<div class="projImg">
-							<img src="Images/interntheory.png" alt="booking.com" />
+							<img src="images/interntheory.png" alt="interntheory.com" />
 						</div>
 						<div class="topic">
 							Clone of<br />
