--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
 		<footer>
 			<div class="text">
 				<span
-					>Created By <a href="#">Somesh</a> | &#169; 2021 All Rights
-					Reserved</span
+					>Made By <a href="#">Somesh</a></span
 				>
 			</div>
 		</footer>
