--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 							remotely.
 						</p>
 						<div class="button">
-							<button>My Resume</button>
+							<a href="resume/resume.pdf" download="resume">
+								<button>My Resume</button>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -278,9 +280,7 @@
 		</section>
 		<footer>
 			<div class="text">
-				<span
-					>Made By <a href="#">Somesh</a></span
-				>
+				<span>Made By <a href="#">Somesh</a></span>
 			</div>
 		</footer>
 		<script src="script.js"></script>
