--- a/about.html
+++ b/about.html
@@ -42,13 +42,31 @@
 				<i class="fas fa-bars"></i>
 			</div>
 		</nav>
-		<section class="home" id="home">
-			<div class="home-content">
-				<div class="text">
-					<div class="text-one">Hello,</div>
-					<div class="text-two">I'm Somesh Yadav</div>
-					<div class="text-three">Full Stack Web Developer</div>
-					<div class="text-four"></div>
+		<section class="about" id="about">
+			<div class="content">
+				<div class="title"><span>About Me</span></div>
+				<div class="about-details">
+					<div class="left">
+						<img
+							src="https://pbs.twimg.com/profile_images/1433635087652851750/Paf6dlcu_400x400.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="right">
+						<div class="topic">A Web Development Enthusiast</div>
+						<p>
+							Hi, I’m Somesh Yadav, graduate from Masai School Web Development
+							Program. I have both hands-on skills on Frontend and Backend
+							technologies to create scalable web applications. I have worked on
+							many projects alone as well as with team and able to work
+							remotely.
+						</p>
+						<div class="button">
+							<a href="resume/resume.pdf" download="resume">
+								<button>My Resume</button>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
