--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,25 @@
 				<i class="fas fa-bars"></i>
 			</div>
 		</nav>
-		<section class="home" id="home">
-			<div class="home-content">
+		<section class="contact" id="contact">
+			<div class="content">
+				<div class="title"><span>Contact Me</span></div>
 				<div class="text">
-					<div class="text-one">Hello,</div>
-					<div class="text-two">I'm Somesh Yadav</div>
-					<div class="text-three">Full Stack Web Developer</div>
-					<div class="text-four"></div>
+					<div class="topic">Reach out for a new project or to say hello</div>
+					<div class="form">
+						<div class="form-top">
+							<input id="name" type="text" placeholder="Enter Name" />
+							<input id="email" type="text" placeholder="Enter E-mail" />
+						</div>
+						<div class="form-bottom">
+							<textarea id="message" placeholder="Enter Message ..."></textarea>
+						</div>
+					</div>
+					<div class="button">
+						<button onclick="sendEmail()">Send</button>
+					</div>
+					<div class="contact_details">Email - someshkumar71524@gmail.com</div>
+					<div class="contact_details">Mobile - +91-6354136407</div>
 				</div>
 			</div>
 		</section>
