--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 					</div>
 				</ul>
 				<div class="media-icons">
-					<a href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+					<a
+						href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+						target="_blank"
 						><i class="fab fa-linkedin"></i
 					></a>
-					<a href="https://twitter.com/SomeshKumarYa12"
+					<a href="https://twitter.com/SomeshKumarYa12" target="_blank"
 						><i class="fab fa-twitter"></i
 					></a>
-					<a href="https://github.com/Somesh-Kumar-Yadav"
+					<a href="https://github.com/Somesh-Kumar-Yadav" target="_blank"
 						><i class="fab fa-github"></i
 					></a>
 				</div>
@@ -52,11 +54,6 @@
 				</div>
 			</div>
 		</section>
-		<footer>
-			<div class="text">
-				<span>Made By <a href="#">Somesh</a></span>
-			</div>
-		</footer>
 		<script src="script.js"></script>
 	</body>
 </html>
