--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,15 @@
 					</div>
 				</ul>
 				<div class="media-icons">
-					<a href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+					<a
+						href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+						target="_blank"
 						><i class="fab fa-linkedin"></i
 					></a>
-					<a href="https://twitter.com/SomeshKumarYa12"
+					<a href="https://twitter.com/SomeshKumarYa12" target="_blank"
 						><i class="fab fa-twitter"></i
 					></a>
-					<a href="https://github.com/Somesh-Kumar-Yadav"
+					<a href="https://github.com/Somesh-Kumar-Yadav" target="_blank"
 						><i class="fab fa-github"></i
 					></a>
 				</div>
@@ -82,8 +84,15 @@
 							<a
 								class="projectView"
 								href="https://github.com/bharadwaj-bhat/Travel_Guru"
-								target="blank"
+								target="_blank"
 								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://travelguru-clone.herokuapp.com/"
+								target="_blank"
+								><i class="fas fa-link"></i>
 								<div>View</div></a
 							>
 						</div>
@@ -124,8 +133,15 @@
 							<a
 								class="projectView"
 								href="https://github.com/Somesh-Kumar-Yadav/Shine-Clone"
-								target="blank"
+								target="_blank"
 								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://shine-clone.herokuapp.com/"
+								target="_blank"
+								><i class="fas fa-link"></i>
 								<div>View</div></a
 							>
 						</div>
@@ -161,8 +177,15 @@
 							<a
 								class="projectView"
 								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
-								target="blank"
+								target="_blank"
 								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://interntheory-clone.netlify.app/"
+								target="_blank"
+								><i class="fas fa-link"></i>
 								<div>View</div></a
 							>
 						</div>
