--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 							remotely.
 						</p>
 						<div class="button">
-							<a href="resume/resume.pdf" download="resume">
+							<a target="_blank" href="resume/resume.pdf" download="resume">
 								<button>My Resume</button>
 							</a>
 						</div>
