--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
 			<div class="navbar">
 				<div class="logo"><a href="#">My Portfolio</a></div>
 				<ul class="menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="skills.html">Skills</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#contact">Contact</a></li>
 					<div class="cancel-btn">
 						<i class="fas fa-times"></i>
 					</div>
 				</ul>
 				<div class="media-icons">
-					<a
-						href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
-						target="_blank"
+					<a href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
 						><i class="fab fa-linkedin"></i
 					></a>
-					<a href="https://twitter.com/SomeshKumarYa12" target="_blank"
+					<a href="https://twitter.com/SomeshKumarYa12"
 						><i class="fab fa-twitter"></i
 					></a>
-					<a href="https://github.com/Somesh-Kumar-Yadav" target="_blank"
+					<a href="https://github.com/Somesh-Kumar-Yadav"
 						><i class="fab fa-github"></i
 					></a>
 				</div>
@@ -54,6 +52,259 @@
 				</div>
 			</div>
 		</section>
+		<section class="about" id="about">
+			<div class="content">
+				<div class="title"><span>About Me</span></div>
+				<div class="about-details">
+					<div class="left">
+						<img
+							src="https://pbs.twimg.com/profile_images/1433635087652851750/Paf6dlcu_400x400.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="right">
+						<div class="topic">A Web Development Enthusiast</div>
+						<p>
+							Hi, I’m Somesh Yadav, graduate from Masai School Web Development
+							Program. I have both hands-on skills on Frontend and Backend
+							technologies to create scalable web applications. I have worked on
+							many projects alone as well as with team and able to work
+							remotely.
+						</p>
+						<div class="button">
+							<a href="resume/resume.pdf" download="resume">
+								<button>My Resume</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="skills" id="skills">
+			<div class="content">
+				<div class="title"><span>My Skills</span></div>
+				<div class="section_content">
+					<div class="skillz">
+						<div class="skillz_category">
+							<div class="skillz_category_label">Languages</div>
+							<ul>
+								<li class="skillz_category_item">HTML5</li>
+								<li class="skillz_category_item">CSS3</li>
+								<li class="skillz_category_item">JAVASCRIPT</li>
+								<li class="skillz_category_item">PYTHON</li>
+								<li class="skillz_category_item">C LANGUAGE</li>
+							</ul>
+						</div>
+
+						<div class="skillz_category">
+							<div class="skillz_category_label">Frameworks</div>
+							<ul>
+								<li class="skillz_category_item">REACT.JS</li>
+								<li class="skillz_category_item">NODE.JS</li>
+								<li class="skillz_category_item">EXPRESS.JS</li>
+								<li class="skillz_category_item">NEXT.JS</li>
+								<li class="skillz_category_item">STYLED-COMPONENTS</li>
+								<li class="skillz_category_item">MATERIAL-UI</li>
+							</ul>
+						</div>
+
+						<div class="skillz_category">
+							<div class="skillz_category_label">Tools</div>
+							<ul>
+								<li class="skillz_category_item">GIT & GITHUB</li>
+								<li class="skillz_category_item">HEROKU</li>
+								<li class="skillz_category_item">POSTMAN</li>
+							</ul>
+						</div>
+
+						<div class="skillz_category">
+							<div class="skillz_category_label">Soft Skills</div>
+							<ul>
+								<li class="skillz_category_item">PROBLEM SOLVING</li>
+								<li class="skillz_category_item">TEAM PLAYER</li>
+								<li class="skillz_category_item">REMOTE WORK</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="projects_cont" id="projects">
+			<div class="content">
+				<div class="title"><span>My Projects</span></div>
+				<div class="boxes">
+					<div class="box">
+						<div class="projImg">
+							<img src="images/travelguru.png" alt="travelguru.com" />
+						</div>
+						<div class="topic">
+							Clone of<br />
+							Travelguru.com
+						</div>
+						<p>
+							Travelguru Homestays is a website that provides a marketplace that
+							offers you an opportunity to book unique accommodations anywhere
+							in the country.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-react react"></i>
+								<p>React</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JS</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/bharadwaj-bhat/Travel_Guru"
+								target="_blank"
+								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://travelguru-clone.herokuapp.com/"
+								target="_blank"
+								><i class="fas fa-link"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+					<div class="box">
+						<div class="projImg">
+							<img src="images/shine.jpeg" alt="shine.com" />
+						</div>
+
+						<div class="topic">
+							Clone of<br />
+							Shine.com
+						</div>
+						<p>
+							Shine.com is the most innovative and second largest online job
+							portal in India. It has more than 3 lakh latest job vacancies from
+							leading companies on site.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-react react"></i>
+								<p>React</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JS</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/Shine-Clone"
+								target="_blank"
+								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://shine-clone.herokuapp.com/"
+								target="_blank"
+								><i class="fas fa-link"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+					<div class="box">
+						<div class="projImg">
+							<img src="images/interntheory.png" alt="interntheory.com" />
+						</div>
+						<div class="topic">
+							Clone of<br />
+							Interntheory.com
+						</div>
+						<p>
+							InternTheory is a web application which provides a platform to
+							mediate between students and companies for relevant internships as
+							well as jobs with neccesary skills.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JS</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
+								target="_blank"
+								><i class="fab fa-github"></i>
+								<div>Github</div></a
+							>
+							<a
+								class="projectView"
+								href="https://interntheory-clone.netlify.app/"
+								target="_blank"
+								><i class="fas fa-link"></i>
+								<div>View</div></a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="contact" id="contact">
+			<div class="content">
+				<div class="title"><span>Contact Me</span></div>
+				<div class="text">
+					<div class="topic">Reach out for a new project or to say hello</div>
+					<div class="form">
+						<div class="form-top">
+							<input id="name" type="text" placeholder="Enter Name" />
+							<input id="email" type="text" placeholder="Enter E-mail" />
+						</div>
+						<div class="form-bottom">
+							<textarea id="message" placeholder="Enter Message ..."></textarea>
+						</div>
+					</div>
+					<div class="button">
+						<button onclick="sendEmail()">Send</button>
+					</div>
+					<div class="contact_details">Email - someshkumar71524@gmail.com</div>
+					<div class="contact_details">Mobile - +91-6354136407</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="text">
+				<span>Made By <a href="#">Somesh</a></span>
+			</div>
+		</footer>
 		<script src="script.js"></script>
 	</body>
 </html>
