--- a/index.html
+++ b/index.html
@@ -295,8 +295,13 @@
 					<div class="button">
 						<button onclick="sendEmail()">Send</button>
 					</div>
-					<div class="contact_details">Email - someshkumar71524@gmail.com</div>
-					<div class="contact_details">Mobile - +91-6354136407</div>
+					<div class="contact_details">
+						Email -
+						<a href="mailto:someshkumar71524@gmail.com"
+							>someshkumar71524@gmail.com</a
+						>
+					</div>
+					<div class="contact_details">Mobile - <a href="tel:+916354136407">+91-6354136407</a></div>
 				</div>
 			</div>
 		</section>
