--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 					</div>
 				</ul>
 				<div class="media-icons">
-					<a href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+					<a
+						href="https://www.linkedin.com/in/somesh-kumar-yadav-3a2141157/"
+						target="_blank"
 						><i class="fab fa-linkedin"></i
 					></a>
-					<a href="https://twitter.com/SomeshKumarYa12"
+					<a href="https://twitter.com/SomeshKumarYa12" target="_blank"
 						><i class="fab fa-twitter"></i
 					></a>
-					<a href="https://github.com/Somesh-Kumar-Yadav"
+					<a href="https://github.com/Somesh-Kumar-Yadav" target="_blank"
 						><i class="fab fa-github"></i
 					></a>
 				</div>
@@ -72,7 +74,7 @@
 							remotely.
 						</p>
 						<div class="button">
-							<a href="resume/resume.pdf" download="resume">
+							<a href="resume/resume.pdf" target="_blank" download="resume">
 								<button>My Resume</button>
 							</a>
 						</div>
@@ -297,11 +299,14 @@
 					</div>
 					<div class="contact_details">
 						Email -
-						<a href="mailto:someshkumar71524@gmail.com"
+						<a target="_blank" href="mailto:someshkumar71524@gmail.com"
 							>someshkumar71524@gmail.com</a
 						>
 					</div>
-					<div class="contact_details">Mobile - <a href="tel:+916354136407">+91-6354136407</a></div>
+					<div class="contact_details">
+						Mobile -
+						<a target="_blank" href="tel:+916354136407">+91-6354136407</a>
+					</div>
 				</div>
 			</div>
 		</section>
