--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
 		/>
-<link
-			rel="icon"
-			href="images/icon.png"
-			type="image/x-icon"
-		/>
+		<link rel="icon" href="images/icon.png" type="image/x-icon" />
 		<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -64,15 +60,16 @@
 				<div class="title"><span>About Me</span></div>
 				<div class="about-details">
 					<div class="left">
-						<img
-							src="images/image.jpeg"
-							alt=""
-						/>
+						<img src="images/image.jpeg" alt="" />
 					</div>
 					<div class="right">
 						<div class="topic">A Web Development Enthusiast</div>
 						<p>
-							Hi, I’m Somesh Yadav, a graduate of the Masai School Web Development Program. I have both hands-on skills in Frontend and Backend technologies to create scalable web applications. I have worked on many projects alone as well as with a team and can work remotely.
+							Hi, I’m Somesh Yadav, a graduate of the Masai School Web
+							Development Program. I have both hands-on skills in Frontend and
+							Backend technologies to create scalable web applications. I have
+							worked on many projects alone as well as with a team and can work
+							remotely.
 						</p>
 						<div class="button">
 							<a href="resume/resume.pdf" target="_blank" download="resume">
@@ -243,7 +240,9 @@
 							Interntheory.com
 						</div>
 						<p>
-							InternTheory is a web application that provides a platform to mediate between students and companies for relevant internships as well as jobs with necessary skills.
+							InternTheory is a web application that provides a platform to
+							mediate between students and companies for relevant internships as
+							well as jobs with necessary skills.
 						</p>
 						<div class="staks">
 							<div class="ico">
