--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							remotely.
 						</p>
 						<div class="button">
-							<a href="resume/resume.pdf" target="_blank" download="resume">
+							<a href="resume/resume.pdf" download="resume" target="_blank">
 								<button>My Resume</button>
 							</a>
 						</div>
