--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
 								href="https://github.com/bharadwaj-bhat/Travel_Guru"
 								target="_blank"
 								><i class="fab fa-github"></i>
-								<div>Github</div></a
+								<div>Click to<br />view code</div></a
 							>
 							<a
 								class="projectView"
 								href="https://travelguru-clone.herokuapp.com/"
 								target="_blank"
 								><i class="fas fa-link"></i>
-								<div>View</div></a
+								<div>Click to<br />view Project</div></a
 							>
 						</div>
 					</div>
@@ -220,14 +220,14 @@
 								href="https://github.com/Somesh-Kumar-Yadav/Shine-Clone"
 								target="_blank"
 								><i class="fab fa-github"></i>
-								<div>Github</div></a
+								<div>Click to<br />view code</div></a
 							>
 							<a
 								class="projectView"
 								href="https://shine-clone.herokuapp.com/"
 								target="_blank"
 								><i class="fas fa-link"></i>
-								<div>View</div></a
+								<div>Click to<br />view Project</div></a
 							>
 						</div>
 					</div>
@@ -264,14 +264,14 @@
 								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
 								target="_blank"
 								><i class="fab fa-github"></i>
-								<div>Github</div></a
+								<div>Click to<br />view code</div></a
 							>
 							<a
 								class="projectView"
 								href="https://interntheory-clone.netlify.app/"
 								target="_blank"
 								><i class="fas fa-link"></i>
-								<div>View</div></a
+								<div>Click to<br />view Project</div></a
 							>
 						</div>
 					</div>
