--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 						</div>
 						<p>
 							InternTheory is a web application that provides a platform to
-							mediate between students and companies for relevant internships as
-							well as jobs with necessary skills.
+							mediate between students and companies for internships as well as
+							jobs with necessary skills.
 						</p>
 						<div class="staks">
 							<div class="ico">
