--- a/index.html
+++ b/index.html
@@ -137,10 +137,7 @@
 						<div class="projImg">
 							<img src="images/travelguru.png" alt="travelguru.com" />
 						</div>
-						<div class="topic">
-							Clone of<br />
-							Travelguru.com
-						</div>
+						<div class="topic">Travelguru.com Clone</div>
 						<p>
 							Travelguru Homestays is a website that provides a marketplace that
 							offers you an opportunity to book unique accommodations anywhere
@@ -184,13 +181,106 @@
 					</div>
 					<div class="box">
 						<div class="projImg">
+							<img
+								src="https://raw.githubusercontent.com/ManishSinghBhadouria/api/gh-pages/Medium.com-Images/Home-Page-After-Login.png"
+								alt="medium.com"
+							/>
+						</div>
+
+						<div class="topic">Medium.com Clone</div>
+						<p>
+							Medium is an American online publishing platform where readers
+							find dynamic thinking, and where expert and undiscovered voices
+							can share their writing on any topic.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-react react"></i>
+								<p>React</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JS</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-node-js"></i>
+								<p>Node.js</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/medium-clone"
+								target="_blank"
+								><i class="fab fa-github"></i>
+								<div>Click to<br />view code</div></a
+							>
+							<a
+								class="projectView"
+								href="https://medium-app-clone.herokuapp.com/"
+								target="_blank"
+								><i class="fas fa-link"></i>
+								<div>Click to<br />view Project</div></a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="boxes">
+					<div class="box">
+						<div class="projImg">
+							<img src="images/interntheory.png" alt="interntheory.com" />
+						</div>
+						<div class="topic">Interntheory.com Clone</div>
+						<p>
+							InternTheory is a web application that provides a platform to
+							mediate between students and companies for internships as well as
+							jobs with necessary skills.
+						</p>
+						<div class="staks">
+							<div class="ico">
+								<i class="fab fa-html5 html"></i>
+								<p>HTML</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-js-square js"></i>
+								<p>JS</p>
+							</div>
+							<div class="ico">
+								<i class="fab fa-css3-alt css"></i>
+								<p>CSS</p>
+							</div>
+						</div>
+						<div class="projects">
+							<a
+								class="projectView"
+								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
+								target="_blank"
+								><i class="fab fa-github"></i>
+								<div>Click to<br />view code</div></a
+							>
+							<a
+								class="projectView"
+								href="https://interntheory-clone.netlify.app/"
+								target="_blank"
+								><i class="fas fa-link"></i>
+								<div>Click to<br />view Project</div></a
+							>
+						</div>
+					</div>
+					<div class="box">
+						<div class="projImg">
 							<img src="images/shine.jpeg" alt="shine.com" />
 						</div>
 
-						<div class="topic">
-							Clone of<br />
-							Shine.com
-						</div>
+						<div class="topic">Shine.com Clone</div>
 						<p>
 							Shine.com is the most innovative and second largest online job
 							portal in India. It has more than 3 lakh latest job vacancies from
@@ -225,50 +315,6 @@
 							<a
 								class="projectView"
 								href="https://shine-clone.herokuapp.com/"
-								target="_blank"
-								><i class="fas fa-link"></i>
-								<div>Click to<br />view Project</div></a
-							>
-						</div>
-					</div>
-					<div class="box">
-						<div class="projImg">
-							<img src="images/interntheory.png" alt="interntheory.com" />
-						</div>
-						<div class="topic">
-							Clone of<br />
-							Interntheory.com
-						</div>
-						<p>
-							InternTheory is a web application that provides a platform to
-							mediate between students and companies for internships as well as
-							jobs with necessary skills.
-						</p>
-						<div class="staks">
-							<div class="ico">
-								<i class="fab fa-html5 html"></i>
-								<p>HTML</p>
-							</div>
-							<div class="ico">
-								<i class="fab fa-js-square js"></i>
-								<p>JS</p>
-							</div>
-							<div class="ico">
-								<i class="fab fa-css3-alt css"></i>
-								<p>CSS</p>
-							</div>
-						</div>
-						<div class="projects">
-							<a
-								class="projectView"
-								href="https://github.com/Somesh-Kumar-Yadav/Project-InternTheory-Clone"
-								target="_blank"
-								><i class="fab fa-github"></i>
-								<div>Click to<br />view code</div></a
-							>
-							<a
-								class="projectView"
-								href="https://interntheory-clone.netlify.app/"
 								target="_blank"
 								><i class="fas fa-link"></i>
 								<div>Click to<br />view Project</div></a
